# servant-client-ghcjs-test

./: .gitignore  README.md  default.nix
test-client/: default.nix  test-client.cabal
test-client/src/: Main.hs
test-server/: default.nix  test-server.cabal
test-server/src/: Main.hs
