name:                test-server
version:             0.11
synopsis:            Server for testing servant-client-ghcjs
description:
  Test server for testing servant-client-ghcjs
homepage:            http://haskell-servant.readthedocs.org/
Bug-reports:         http://github.com/haskell-servant/servant/issues
license:             BSD3
license-file:        LICENSE
author:              Servant Contributors
maintainer:          haskell-servant-maintainers@googlegroups.com
copyright:           2014-2016 Zalora South East Asia Pte Ltd, Servant Contributors
category:            Servant, Web
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC >= 7.8

source-repository head
  type: git
  location: http://github.com/haskell-servant/servant.git

executable test-server
  default-language: Haskell2010
  ghc-options: -Wall
  hs-source-dirs: src
  main-is: Main.hs
  build-depends:
      base == 4.*
    , aeson
    , base-compat
    , http-api-data
    , http-types
    , mtl
    , servant
    , servant-server
    , servant-server == 0.11.*
    , wai
    , warp
